# rustio-design

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  rustio.design.toml  view_editor.html
.claude/commands/: design-build.md  design-check.md  design-context.md  design-edit.md  design-explain.md  design-reason.md
.github/workflows/: design.yml
assets/design/: DESIGN_ARCHITECTURE.md  DESIGN_BRIEF.md
design/: DESIGN_DECISIONS.md  DESIGN_HISTORY.md  DESIGN_REASONING.md
docs/: VIEW_LAYER.md
examples/bookings/: rustio.design.toml
examples/bookings/src/: main.rs
src/: allowlist.rs  color.rs  context.rs  list_tpl.rs  main.rs  manifest.rs  nav.rs  schema.rs  sha256.rs  spec.rs  tokens.rs  toml_lite.rs  validate.rs  views.rs
tests/: cli.rs
